--- a/src/fanuc_m16ib_moveit_config/CMakeLists.txt
+++ b/src/fanuc_m16ib_moveit_config/CMakeLists.txt
@@ -23,4 +23,13 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+
+# add custom directories to install them while buildung
+install(DIRECTORY
+  config
+  launch
+  srdf
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 ament_package()
