create bringup launch

--- a/src/fanuc_m16ib_bringup/CMakeLists.txt
+++ b/src/fanuc_m16ib_bringup/CMakeLists.txt
@@ -26,7 +26,7 @@ endif()
 
 # add custom directories to install them while buildung
 install(DIRECTORY
-  config
+  rviz
   launch
   DESTINATION share/${PROJECT_NAME}/
 )
