--- a/src/fanuc_m16ib_moveit_config/config/kinematics.yaml
+++ b/src/fanuc_m16ib_moveit_config/config/kinematics.yaml
@@ -2,11 +2,17 @@
   ros__parameters:
     robot_description_kinematics:
       fanuc_m16ib:
-        kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
-        solve_type: Distance # Speed, Manipulation1, Manipulation2, Distance
-        kinematics_solver_timeout: 0.05 # 0.005
-        kinematics_solver_attempts: 10
+        kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+        kinematics_solver_search_resolution: 0.005
+        kinematics_solver_timeout: 0.005
+        kinematics_solver_attempts: 3
 
+        # kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
+        # position_only_ik: true
+        # solve_type: Distance # Speed, Manipulation1, Manipulation2, Distance
+        # kinematics_solver_timeout: 0.5 # 0.005
+        # kinematics_solver_attempts: 10
+        # epsilon: 1e-5
 
 
   
@@ -15,3 +21,11 @@
         # kinematics_solver_search_resolution: 0.005
         # kinematics_solver_timeout: 0.005
         # kinematics_solver_attempts: 3
+
+  # epsilon
+  # kinematics_solver_attempts
+  # kinematics_solver_ik_links
+  # kinematics_solver_search_resolution
+  # kinematics_solver_timeout
+  # position_only_ik
+  # solve_type
