--- a/src/moveit_wrapper/package.xml
+++ b/src/moveit_wrapper/package.xml
@@ -14,8 +14,8 @@
 
     <depend>rclcpp</depend>
     <depend>rclcpp_lifecycle</depend>
-    <depend>iras_interfaces</depend>
     <depend>geometry_msgs</depend>
+    <depend>trajectory_msgs</depend>
     <depend>moveit_core</depend>
     <depend>moveit_ros_planning_interface</depend>
     <depend>std_msgs</depend>
